tests/baselines/reference/importTypeNonString.errors.txt
tests/cases/conformance/types/import/importTypeNonString.ts(1,24): error TS1141: String literal expected.


==== tests/cases/conformance/types/import/importTypeNonString.ts (1 errors) ====
    export const x: import({x: 12}) = undefined as any;
                           ~~~~~~~
!!! error TS1141: String literal expected.
    